--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1,9 +1,32 @@
-% This is LLNCS.DEM the demonstration file of
-% the LaTeX macro package from Springer-Verlag
-% for Lecture Notes in Computer Science,
-% version 2.4 for LaTeX2e as of 16. April 2010
+% THIS IS SIGPROC-SP.TEX - VERSION 3.1
+% WORKS WITH V3.2SP OF ACM_PROC_ARTICLE-SP.CLS
+% APRIL 2009
 %
-\documentclass{llncs}
+% It is an example file showing how to use the 'acm_proc_article-sp.cls' V3.2SP
+% LaTeX2e document class file for Conference Proceedings submissions.
+% ----------------------------------------------------------------------------------------------------------------
+% This .tex file (and associated .cls V3.2SP) *DOES NOT* produce:
+%       1) The Permission Statement
+%       2) The Conference (location) Info information
+%       3) The Copyright Line with ACM data
+%       4) Page numbering
+% ---------------------------------------------------------------------------------------------------------------
+% It is an example which *does* use the .bib file (from which the .bbl file
+% is produced).
+% REMEMBER HOWEVER: After having produced the .bbl file,
+% and prior to final submission,
+% you need to 'insert'  your .bbl file into your source .tex file so as to provide
+% ONE 'self-contained' source file.
+%
+% Questions regarding SIGS should be sent to
+% Adrienne Griscti ---> griscti@acm.org
+%
+% Questions/suggestions regarding the guidelines, .tex and .cls files, etc. to
+% Gerald Murray ---> murray@hq.acm.org
+%
+% For tracking purposes - this is V3.1SP - APRIL 2009
+
+\documentclass{acm_proc_article-sp}
 
 % allows for temporary adjustment of side margins
 \usepackage{chngpage}
@@ -25,7 +48,6 @@
 %\usepackage[colorinlistoftodos]{todonotes}
 %\newcommand{\ke}[1]{\todo[size=\small, color=orange!40]{\textbf{Kai:} #1}}
 %\newcommand{\tb}[1]{\todo[size=\small, color=green!40]{\textbf{Thomas:} #1}}
-
 
 %\usepackage{makeidx}  % allows for indexgeneration
 
@@ -174,14 +196,9 @@
   \linebreak
 }
 
-\setcounter{secnumdepth}{5}
-
 \begin{document}
-\renewcommand{\arraystretch}{1.3}
-%
-%
+
 \title{The Role of Constraint Languages and Reasoning for RDF Validation}
-\subtitle{}
 % On Constraint Languages for RDF Validation with an account to Reasoning
 %On Constraint Languages for RDF Validation and Reasoning
 %RDF Validation - Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity
@@ -190,29 +207,88 @@
 %Classifying Constraint Languages for RDF Validation
 %RDF Validation and Reasoning.
 %Classifying Constraint Languages for RDF validation Concerning Reasoning
-\titlerunning{XXXXX}  % abbreviated title (for running head)
-%                                     also used for the TOC unless
-%                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Andreas Nolle\inst{3} \and Kai Eckert\inst{2}}
+% You need the command \numberofauthors to handle the 'placement
+% and alignment' of the authors beneath the title.
 %
-\authorrunning{} % abbreviated author list (for running head)
+% For aesthetic reasons, we recommend 'three authors at a time'
+% i.e. three 'name/affiliation blocks' be placed beneath the title.
 %
-%%%% list of authors for the TOC (use if author list has to be modified)
-\institute{GESIS – Leibniz Institute for the Social Sciences, Germany\\
-\email{thomas.bosch@gesis.org},\\ 
-\and
-University of Mannheim, Germany \\
-\email{\{erman,kai\}@informatik.uni-mannheim.de} 
-\and
-Albstadt-Sigmaringen University, Germany \\
-\email{nolle@hs-albsig.de}
+% NOTE: You are NOT restricted in how many 'rows' of
+% "name/affiliations" may appear. We just ask that you restrict
+% the number of 'columns' to three.
+%
+% Because of the available 'opening page real-estate'
+% we ask you to refrain from putting more than six authors
+% (two rows with three columns) beneath the article title.
+% More than six makes the first-page appear very cluttered indeed.
+%
+% Use the \alignauthor commands to handle the names
+% and affiliations for an 'aesthetic maximum' of six authors.
+% Add names, affiliations, addresses for
+% the seventh etc. author(s) as the argument for the
+% \additionalauthors command.
+% These 'additional authors' will be output/set for you
+% without further effort on your part as the last section in
+% the body of your article BEFORE References or any Appendices.
+
+\numberofauthors{4} %  in this sample file, there are a *total*
+% of EIGHT authors. SIX appear on the 'first-page' (for formatting
+% reasons) and the remaining two appear in the \additionalauthors section.
+%
+\author{
+% You can go ahead and credit any number of authors here,
+% e.g. one 'row of three' or two rows (consisting of one row of three
+% and a second row of one, two or three).
+%
+% The command \alignauthor (no curly braces needed) should
+% precede each author name, affiliation/snail-mail address and
+% e-mail address. Additionally, tag each line of
+% affiliation/address with \affaddr, and tag the
+% e-mail address with \email.
+%
+% 1st. author
+\alignauthor
+Thomas Bosch\\
+       \affaddr{GESIS - Leibniz Institute for the Social Sciences, Germany}\\
+       %\affaddr{1932 Wallamaloo Lane}\\
+       %\affaddr{Wallamaloo, New Zealand}\\
+       \email{thomas.bosch@gesis.org}
+% 2nd. author
+\alignauthor
+Erman Acar\\
+       \affaddr{University of Mannheim, Germany}\\
+       %\affaddr{P.O. Box 1212}\\
+       %\affaddr{Dublin, Ohio 43017-6221}\\
+       \email{erman@informatik.uni-mannheim.de}
+% 3rd. author
+\alignauthor Andreas Nolle\\
+       \affaddr{Albstadt-Sigmaringen University, Germany}\\
+       %\affaddr{1 Th{\o}rv{\"a}ld Circle}\\
+       %\affaddr{Hekla, Iceland}\\
+       \email{nolle@hs-albsig.de}
+\and  % use '\and' if you need 'another row' of author names
+% 4th. author
+\alignauthor Kai Eckert\\
+       \affaddr{Stuttgart Media University, Germany}\\
+       %\affaddr{Brookhaven National Lab}\\
+       %\affaddr{P.O. Box 5000}\\
+       \email{eckert@hdm-stuttgart.de}
 }
+% There's nothing stopping you putting the seventh, eighth, etc.
+% author on the opening page (as the 'third row') but we ask,
+% for aesthetic reasons that you place these 'additional authors'
+% in the \additional authors block, viz.
+%\additionalauthors{Additional authors: John Smith (The Th{\o}rv{\"a}ld Group,
+%email: {\texttt{jsmith@affiliation.org}}) and Julius P.~Kumquat
+%(The Kumquat Consortium, email: {\texttt{jpkumquat@consortium.net}}).}
+%\date{30 July 1999}
+% Just remember to make sure that the TOTAL number of authors
+% is the number that will appear on the first page PLUS the
+% number that will appear in the \additionalauthors section.
 
-\maketitle              % typeset the title of the contribution
-
+\maketitle
 \begin{abstract}
-
 For data practitioners embracing the world of RDF and Linked Data, the openness and flexibility is a mixed blessing. For them, data validation according to predefined constraints is a  much sought-after feature, particularly as this is taken for granted in the XML world. 
 Several languages exist to meet this requirement, ranging from using \emph{OWL} as a constraint language to \emph{SPIN}, a SPARQL-based way to formulate and check constraints. 
 %There are also specific constraint languages like Shape Expressions, Resource Shapes or Description Set Profiles that more or less explicitly address the aforementioned data practitioners.
@@ -237,10 +313,16 @@ We argue that so far no single best solution exists and that the results present
 %%Validators can determine which axioms cause high complexity and which constraints can only be expressed within a more sophisticated expressivity class.
 %%As a next step, validators give some guidance how to get to lower expressivity and complexity classes.
 %%If validators propose multiple constraint languages for a particular validation use case, additional rather subjective criteria regarding user-friendliness may be evaluated.
-
-\keywords{RDF Validation, RDF Constraints, OWL 2, Reasoning, RDF Validation Requirements, Linked Data, Semantic Web}
 \end{abstract}
-%
+
+% A category with the (minimum) three required fields
+\category{H.4}{Information Systems Applications}{Miscellaneous}
+%A category including the fourth, optional field follows...
+\category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
+
+\terms{Theory}
+
+\keywords{RDF Validation, RDF Constraints, OWL 2, Reasoning, RDF Validation Requirements, Linked Data, Semantic Web} % NOT required for Proceedings
 
 %\section{Possible Titles}
 %
@@ -881,7 +963,7 @@ This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite}
 \section{Classification of RDF Constraint Types According to CWA/UNA Dependency, Reasoning and Complexity}
 \label{classification-rdf-constraints}
 
-\tb{R1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
+\textcolor{red}{R1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
 
 %We divide these constraints into three classes:
 %\begin{itemize}
@@ -889,7 +971,7 @@ This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite}
 	%\item constraints not expressible by OWL 2 QL but by OWL 2 DL
 	%\item constraints only expressible by other constraint languages
 %\end{itemize}
-For this paper, we identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type.\tb{ToDO: 74 - 82} 
+For this paper, we identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type.\textcolor{red}{ToDO: 74 - 82} 
 We recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} (serving as appendix of this paper) in which we explain each requirement (constraint type) in detail and give examples for each (represented by listed constraint languages).
 This technical report also contains mappings to DL to logically underpin each requirement and to determine which DL constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
 %When the DL constructs  which are needed to express a particular constraint are known, the required expressivity and the computational complexity to perform reasoning for that constraint can be determined. 
@@ -988,7 +1070,7 @@ For this work, following the similar fashion, we evaluated for each constraint t
 if it is dependent or independent on the \emph{CWA} and on the \emph{UNA} (for a detailed analysis we refer to the appendix of this paper \cite{BoschNolleAcarEckert2015}). 
 The result of this evaluation is that we distinguish between XX $\mathcal{CT}_{CWA}$ and XX $\overline{\mathcal{CT}_{CWA}}$ and between XX $\mathcal{CT}_{UNA}$ and XX $\overline{\mathcal{CT}_{UNA}}$ constraint types.
 Hence, for the majority of constraint types it makes a difference if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed.
-\tb{ToDo: evaluation}
+\textcolor{red}{ToDo: evaluation}
 
 \subsection{Reasoning}
 
@@ -1187,7 +1269,7 @@ each \emph{publication} can only have \emph{author} relationships to \emph{perso
 \subsubsection{Constraint Types without Reasoning}
 \label{RDF-Validation-Requirements-without-Reasoning}
 
-For the majority of the constraint types, reasoning is not needed to be performed prior to validation. \tb{unclear!}
+For the majority of the constraint types, reasoning is not needed to be performed prior to validation. \textcolor{red}{unclear!}
 It is possible, however, to execute reasoning before validating constraints for which reasoning does not affect validation results.
 %\textbf{Expressible by OWL 2.}
 %\label{sec:RDF-validation-requirements-without-reasoning-2}
@@ -1472,7 +1554,7 @@ some constraint types in $\mathcal{C}_R$ are not only expressible by OWL 2  but 
 		\end{tabular}
 	\caption{Constraint Type Specific Expressivity}
 	\label{tab:constraint-type-specific-expressivity}
-\end{table}\tb{The numbers in parentheses in table 2: what are these
+\end{table}\textcolor{red}{The numbers in parentheses in table 2: what are these
 extensions/restrictions?  The subsequent ordering of expressivity
 seems to include these values in the ranking: why?}
 %\end{center}
@@ -1844,7 +1926,7 @@ The validator may also recommend one of these constraint languages having the hi
 As reasoning may cause high complexity, the validator may show which constraint types from the user's selection cause the higher complexity class 
 and it may provide solutions how to get to the next lower complexity class. In this regard, it would be charming to have an estimation on which group of constraint types would demand what class of complexity. However, this is not an easy question, since complexity results are language specific and operational semantics is involved as well. Therefore, it is hard to maintain a general complexity result for a constraint type independent of the language chosen. Yet, providing an estimation for particular cases can still be straightforward.
 
-\tb{ToDo: requirements in brackets}
+\textcolor{red}{ToDo: requirements in brackets}
 
 reviews:
 \begin{itemize}
@@ -1989,8 +2071,67 @@ BTW, it is completely misleading to say in introduction  "Reasoning is a promisi
 %Best regards, Christian.
 
 
-\bibliography{../../literature/literature}{}
-\bibliographystyle{plain}
-\setcounter{tocdepth}{1}
-%\listoftodos
+
+%
+% The following two commands are all you need in the
+% initial runs of your .tex file to
+% produce the bibliography for the citations in your paper.
+\bibliographystyle{abbrv}
+\bibliography{../../literature/literature}  % sigproc.bib is the name of the Bibliography in this case
+% You must have a proper ".bib" file
+%  and remember to run:
+% latex bibtex latex latex
+% to resolve all references
+%
+% ACM needs 'a single self-contained file'!
+%
+%APPENDICES are optional
+%\balancecolumns
+%\appendix
+%Appendix A
+%\section{Headings in Appendices}
+%The rules about hierarchical headings discussed above for
+%the body of the article are different in the appendices.
+%In the \textbf{appendix} environment, the command
+%\textbf{section} is used to
+%indicate the start of each Appendix, with alphabetic order
+%designation (i.e. the first is A, the second B, etc.) and
+%a title (if you include one).  So, if you need
+%hierarchical structure
+%\textit{within} an Appendix, start with \textbf{subsection} as the
+%highest level. Here is an outline of the body of this
+%document in Appendix-appropriate form:
+%\subsection{Introduction}
+%\subsection{The Body of the Paper}
+%\subsubsection{Type Changes and  Special Characters}
+%\subsubsection{Math Equations}
+%\paragraph{Inline (In-text) Equations}
+%\paragraph{Display Equations}
+%\subsubsection{Citations}
+%\subsubsection{Tables}
+%\subsubsection{Figures}
+%\subsubsection{Theorem-like Constructs}
+%\subsubsection*{A Caveat for the \TeX\ Expert}
+%\subsection{Conclusions}
+%\subsection{Acknowledgments}
+%\subsection{Additional Authors}
+%This section is inserted by \LaTeX; you do not insert it.
+%You just add the names and information in the
+%\texttt{{\char'134}additionalauthors} command at the start
+%of the document.
+%\subsection{References}
+%Generated by bibtex from your ~.bib file.  Run latex,
+%then bibtex, then latex twice (to resolve references)
+%to create the ~.bbl file.  Insert that ~.bbl file into
+%the .tex source file and comment out
+%the command \texttt{{\char'134}thebibliography}.
+%% This next section command marks the start of
+%% Appendix B, and does not continue the present hierarchy
+%\section{More Help for the Hardy}
+%The acm\_proc\_article-sp document class file itself is chock-full of succinct
+%and helpful comments.  If you consider yourself a moderately
+%experienced to expert user of \LaTeX, you may find reading
+%it useful but please remember not to change it.
+\balancecolumns
+% That's all folks!
 \end{document}
