--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -58,7 +58,9 @@
 \captionsetup[table]{skip=10pt}
 
 % monospace within text
-\newcommand{\ms}[1]{\texttt{#1}}
+\newcommand{\ms}[1]{%
+  \texttt{#1}
+}
 
 % examples
 \usepackage{fancyvrb}
@@ -520,8 +522,8 @@ Hence, we overcome this weakness of redundancy by associating the constraint wit
 %-----
 \emph{OWL} is an expressive language which is mainly praised for its reasoning capabilities in the Semantic Web community. 
 The knowledge representation formalism {\em Description logics} (\emph{DL}), with its  well-studied theoretical properties, provides the foundational basis for \emph{OWL}. 
-\emph{DL} can be used to express constraints like (1) \emph{publications} must have at least one \emph{author} which must be a \emph{person} (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}) and
-(2) \emph{books}, \emph{conference proceedings}, and \emph{journal articles} are \emph{publications} (\ms{Book $\sqcup$} \ms{ConferenceArticle $\sqcup$} \ms{JournalArticle $\sqsubseteq$ Publication}). 
+\emph{DL} can be used to express constraints like (1) \emph{publications} must have at least one \emph{author} which must be a \emph{person} ({\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}}) and
+(2) \emph{books}, \emph{conference proceedings}, and \emph{journal articles} are \emph{publications} ({\small\ms{Book $\sqcup$} \ms{ConferenceArticle $\sqcup$} \ms{JournalArticle $\sqsubseteq$ Publication}}). 
 We map constraint types to \emph{DL} statements to classify each constraint type according to semantics, reasoning, and expressivity
 and to determine the capabilities of constraint languages with regard to the same characteristics.
 
@@ -865,19 +867,19 @@ The \textbf{contributions} of this paper are:
 %\begin{itemize}
 	%\item advantages and disadvantages of OWL in terms of validation
 %\end{itemize}
-OWL is an expressive Semantic Web language which is based on Description logics, offering knowledge representation and reasoning services. OWL 2 is an extended new version of it. Validation, however, is not the primary purpose of its design. 
-This has lead to claims that OWL 2 cannot be used for validation. 
-There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
+\emph{OWL} in its current version \emph{OWL 2} is an expressive language which is based on Description logics, offering knowledge representation and reasoning services. 
+Validation, however, is not the primary purpose of its design. 
+This has lead to claims that \emph{OWL 2} cannot be used for validation. 
+%There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if \emph{OWL 2} should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
-In practice, OWL 2 is well-spread and RDFS/OWL 2 constructs are widely used to tell people and applications about how valid instances should be created.
-
-RDF documents follow the structure of RDFS/OWL 2 ontologies which can therefore be reused for validation. 
+In practice, \emph{OWL 2} is well-spread and \emph{RDFS}/\emph{OWL 2} constructs are widely used to tell people and applications about how valid instances should be created.
+\emph{RDF} documents follow the structure of \emph{RDFS}/\emph{OWL 2} ontologies which can therefore be reused for validation according to this structure. 
 %In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy.\tb{the following example is not about solving the redundancy problem, it is about how constraint violations cab be resolved when performing reasoning / we should delete this sentence here, as we starting talking about redundancy problem below}
-Reasoning is beneficial for RDF validation as 
+Reasoning is beneficial for \emph{RDF} validation as 
 (1) it may resolve constraint violations, 
-(2) it may cause additional constraint violations, and 
+(2) it may cause useful constraint violations, and 
 (3) it solves the redundancy problem. 
-Consider the following DL knowledge base $\mathcal{K}$\footnote{A knowledge base is a collection of formal statements  which corresponds to \emph{facts} or  \emph{what is known} explicitly.}
+Consider the following \emph{DL} knowledge base $\mathcal{K}$\footnote{A knowledge base is a collection of formal statements  which corresponds to \emph{facts} or  \emph{what is known} explicitly.}:
 
 {\scriptsize
 \begin{center}
@@ -907,39 +909,39 @@ $\mathcal{K}=\{$ \\
 %\end{DL}
 %\end{center}
 
-As we know that \emph{books} can only have \emph{persons} as \emph{authors} (\ms{Book $\sqsubseteq \forall$} \ms{author.} \ms{Person}), 
-{\em Huckleberry-Finn} is a \emph{book}  (\ms{Book(Huckleberry-Finn)}), 
-and \emph{Mark Twain} is its \emph{author} (\ms{author(Huckleberry-Finn, Mark-Twain)}),
+As we know that \emph{books} can only have \emph{persons} as \emph{authors} ({\small \ms{Book} \ms{$\sqsubseteq$} \ms{$\forall$} \ms{author} \ms{.} \ms{Person} }), 
+{\em Huckleberry-Finn} is a \emph{book}  ({\small\ms{Book(Huckleberry-Finn)}}), 
+and \emph{Mark Twain} is its \emph{author} ({\small\ms{author(Huckleberry-Finn, Mark-Twain)}}),
 we conclude that \emph{Mark Twain} must be a \emph{person}.
 %The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
 As \emph{Mark Twain} is not explicitly defined to be a \emph{person}, however, a constraint violation is raised.
-But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple \ms{Person(Mark-Twain)} is inferred. 
+But if we apply a reasoner before validating, this constraint violation is resolved since the implicit triple {\small\ms{Person(Mark-Twain)}} is inferred. 
 Reasoning may cause additional constraint violations needed to enhance data quality, e.g., as \emph{books} are \emph{publications}, constraints on publications are also validated for \emph{books} (e.g. each publication must have a publisher).
 Most of the constraint languages except OWL 2, have a major shortcoming of redundancy.
-With its open-world semantics, used as a constraint language, OWL 2 solves the redundancy problem (see introduction). 
+With its open-world semantics, used as a constraint language, \emph{OWL 2} solves the redundancy problem (see introduction). 
 %\tb{there is no example for solving redundancy problem / can we use the one of the introduction (just referring to this example in 1 sentence)}
 %\tb{we have no example why R causes new valuable constraint violations}
 
 %\tb{the next 2 paragraphs are about differences in semantics}
-OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption} (UNA)). 
-This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation in the past.  
-Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
+\emph{OWL 2} is based on the {\em non-unique name assumption} (\emph{nUNA}) whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption} (\emph{UNA})). 
+This ambiguity in semantics is one of the main reasons why \emph{OWL 2} has not been adopted as a standard constraint language for RDF validation in the past.  
+Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (\emph{OWA}), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
 %Most of the constraint languages except OWL, have a major shortcoming of redundancy.
 %With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
 %\tb{the following example does not show the redundancy problem!}
 %\tb{2. benefit: reasoning solves redundancy problem}
-As each \emph{book} must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and {\em Hamlet} is a book (\ms{Book(Hamlet)}),
+As each \emph{book} must have a title ({\small\ms{Book $\sqsubseteq \exists$ title.$\top$}}) and {\em Hamlet} is a book ({\small\ms{Book(Hamlet)}}),
 the \emph{book} {\em Hamlet} must have at least one title.
 In an OWA setting, this axiom does not cause a constraint violation (even if there is no explicitly defined title), since there must be a title for this \emph{book} which we may not know ($\mathcal{K}$ is consistent). 
 
-On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true).
-Hence, classical constraint languages are based on CWA where constraints need to be satisfied only by named individuals which yields in return to a constraint violation. This would be a shortcoming of OWA in RDF validation. 
-We can further observe that there is a clash caused by the functional property {\em title} (\ms{funct (title)}) and the UNA,
+On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (\emph{CWA}) (i.e., a statement is inferred to be false if it cannot be proved to be true).
+Hence, classical constraint languages are based on CWA where constraints need to be satisfied only by named individuals which yields in return to a constraint violation. This would be a shortcoming of \emph{OWA} in RDF validation. 
+We can further observe that there is a clash caused by the functional property {\em title} ({\small\ms{funct (title)}}) and the \emph{UNA},
 since the book {\em Huckleberry-Finn} has more than one title
-(\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
-In OWA, however, there is no UNA by default, therefore reasoning will conclude that {\em The-Adventures-of-Huckleberry-Finn} is the same as {\em Die-Abenteuer-des-Huckleberry-Finn} (\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckle} \ms{berry-}\ms{Finn\}}). 
-This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009}, which is the basis for OWL 2 QL. 
+({\small\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}}, {\small\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}}).
+In \emph{OWA}, however, there is no \emph{UNA} by default, therefore reasoning will conclude that {\em The-Adventures-of-Huckleberry-Finn} is the same as {\em Die-Abenteuer-des-Huckleberry-Finn} ({\small\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckleberry-Finn\}}}). 
+This is not a problem if we add the \emph{UNA} to the \emph{OWA}, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009}, which is the basis for \emph{OWL 2 QL}. 
 
 %\subsection{Expressivity and Complexity in OWL 2}
 
